cdn default theme

--- a/application/themes/default/assets/css/parts/header.css
+++ b/application/themes/default/assets/css/parts/header.css
@@ -104,7 +104,7 @@
 
 @font-face {
 	font-family:'frozen'; 
-	src:url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/209981/Ice%20kingdom%20-%20Bold%20-%20Por%20Kustren.woff');
+	src:url('https://cdn.amanthul.cu/web/font/Ice%20kingdom%20-%20Bold%20-%20Por%20Kustren.woff');
 }
 
 h1 {
